# APK-Thumbnailer

./: .clang-format  README.md  apk-thumbnailer.thumbnailer.in  meson.build
src/: apk.c  apk.h  binary_reader.c  binary_reader.h  chunk.c  chunk.h  main.c  string_pool.c  string_pool.h  utils.c  utils.h  xml.c  xml.h
